[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiodns>=3.2.0",
    "aiohttp>=3.11.14",
    "discord-py>=2.5.2",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pycares>=4.5.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.43.2",
    "trafilatura>=2.0.0",
    "twilio>=9.5.0",
]
